Adding Sublime Text Project and Workspace Files
Version 0.2
Also, removed "Registered" mark from LinkedIn link, mostly just to see
how GitHub for Windows handles updates to files done with Sublime Text.

--- a/socialMedia.html
+++ b/socialMedia.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
         <li>
-            <a href="https://www.linkedin.com/in/bobdownsinfo"><img src="images/socialMedia/In-2C-28px-R.png" alt="LinkedIn Logo">LinkedIn&#174;</a>
+            <a href="https://www.linkedin.com/in/bobdownsinfo"><img src="images/socialMedia/In-2C-28px-R.png" alt="LinkedIn Logo">LinkedIn</a>
         </li>
         <li>
             <a href="https://www.facebook.com/bobdownsinfo"><img src="images/socialMedia/FB-f-Logo__white_29.png" alt="Facebook Logo">Facebook</a>
