--- a/home.html
+++ b/home.html
@@ -7,8 +7,7 @@
 
 	<body>
 		<img src="images/Downs-Robert-Web-Design.jpg" height="25%" width="25%" />
-		<p>Hi! My name is Bob Downs and I am learning Web Design! I really like coffee and I would love to live on a beach, near a mountain forest.</p>
-		<script src="https://fightforthefuture.github.io/internet-vote-widget/widget.min.js" async></script>
+		<p>Bob Downs is a Web Design student, proofreader, father, husband, geek, and coffee lover.</p>
 	</body>
 
 </html>
