--- a/socialMedia.html
+++ b/socialMedia.html
@@ -21,8 +21,8 @@
         <li><a href="https://www.behance.net/w3bd3sign3r">Behance</a></li>
         <li><a href="https://github.com/bobdowns">GitHub</a></li>
         <li><a href="http://bobdowns.tumblr.com/">Tumblr</a></li>
-        <li><a href="https://bobdowns.wordpress.com/">My Old (REALLY Old) Writing Blog</a></li>
-        <li><a href="http://bobdowns.wpengine.com/">My (Relatively) Current Writing Blog</a></li>
+        <li><a href="https://bobdowns.wordpress.com/">My Old Writing Blog</a></li>
+        <li><a href="http://bobdowns.wpengine.com/">My Current Writing Blog</a></li>
         <li><a href="http://en.gravatar.com/bobdowns">Gravatar</a></li>
         <li><a href="https://www.blogger.com/profile/10076569728641887593">Blogger</a></li>
         <li><a href="https://www.goodreads.com/bobdowns">Goodreads</a></li>
@@ -31,6 +31,8 @@
         <li><a href="https://about.me/bobdowns">About.me</a></li>
         <li><a href="https://ello.co/bobdowns">ello</a></li>
         <li><a href="https://medium.com/@bobdownsinfo">Medium</a></li>
+        <li><a href="http://stackexchange.com/users/2298012/bobdowns">StackExchange</a></li>
+        <li><a href="http://www.ebay.com/usr/cyborg_cyborg">eBay</a></li>
     </ul>
 </body>
 
