Changed Text to More Professional Copy from Resume
Version 0.4
Also, changed text from <p> to <ul><li>. Had to change CSS to
accommodate this change.

--- a/home.html
+++ b/home.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<link type="text/css" rel="stylesheet" href="stylesheet.css" />
-	</head>
+<head>
+    <link type="text/css" rel="stylesheet" href="stylesheet.css" />
+</head>
 
-	<body>
-		<img src="images/Downs-Robert-Web-Design.jpg" height="25%" width="25%" />
-		<p>Bob Downs is a Web Design student, proofreader, father, husband, geek, and coffee lover.</p>
-	</body>
+<body>
+    <img src="images/Downs-Robert-Web-Design.jpg" height="25%" width="25%" />
+    <ul>
+        <li>Experienced Webmaster &amp; Developer working with state-of-the-art Web and Windows technologies.</li>
+        <li>Performed creative and technical design, development and delivery of a PTO website.</li>
+        <li>Proficient with HTML, CSS, WordPress, and MS Office.</li>
+        <li>Outstanding communication, organizational and project management skills.</li>
+    </ul>>
+</body>
 
 </html>
