--- a/socialMedia.html
+++ b/socialMedia.html
@@ -33,6 +33,7 @@
         <li><a href="https://medium.com/@bobdownsinfo">Medium</a></li>
         <li><a href="http://stackexchange.com/users/2298012/bobdowns">StackExchange</a></li>
         <li><a href="http://www.ebay.com/usr/cyborg_cyborg">eBay</a></li>
+        <li><a href="http://codepen.io/bobdownsinfo/">CodePen</a></li>
     </ul>
 </body>
 
