--- a/socialMedia.html
+++ b/socialMedia.html
@@ -34,6 +34,9 @@
         <li><a href="http://stackexchange.com/users/2298012/bobdowns">StackExchange</a></li>
         <li><a href="http://www.ebay.com/usr/cyborg_cyborg">eBay</a></li>
         <li><a href="http://codepen.io/bobdownsinfo/">CodePen</a></li>
+        <li><a href="https://dribbble.com/bobdowns">dribbble</a></li>
+        <li><a href="https://webapp4.asu.edu/directory/person/1437173">ASU Directory Profile</a></li>
+        <li><a href="https://profile.live.com/cid-118a7311991bd61d/">Microsoft Profile</a></li>
     </ul>
 </body>
 
