Major Restyling of Entire Site
Got rid of resource-heavy and slow-loading coffee-bean background.
Replaced it with simple CSS background: AliceBlue;. Used new CSS
viewport-sized font-size(ing) to automatically accommodate various
screen-widths. Added Google Fonts Poppins font.

--- a/home.html
+++ b/home.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
+	<link href='http://fonts.googleapis.com/css?family=Poppins:300' rel='stylesheet' type='text/css'>
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
 </head>
 
 <body>
-    <img src="images/Downs-Robert-Web-Design.jpg" height="25%" width="25%" />
+	<h1>Bob<br>Downs</h1>
     <ul>
         <li>Experienced Webmaster &amp; Developer working with state-of-the-art Web and Windows technologies.</li>
         <li>Performed creative and technical design, development and delivery of a PTO website.</li>
