--- a/socialMedia.html
+++ b/socialMedia.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link href='http://fonts.googleapis.com/css?family=Poppins:300' rel='stylesheet' type='text/css'>
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
 </head>
 
@@ -18,6 +19,7 @@
         <li><a href="https://www.flickr.com/people/csrcyborg/">Flickr</a></li>
         <li><a href="https://foursquare.com/bobdownsinfo">Foursquare</a></li>
         <li><a href="https://trustcloud.com/!/bobdownsinfo">Trustcloud</a></li>
+        <li><a href="https://klout.com/#/bobdownsinfo">Klout</a></li>
         <li><a href="https://www.behance.net/w3bd3sign3r">Behance</a></li>
         <li><a href="https://github.com/bobdowns">GitHub</a></li>
         <li><a href="http://bobdowns.tumblr.com/">Tumblr</a></li>
@@ -32,11 +34,15 @@
         <li><a href="https://ello.co/bobdowns">ello</a></li>
         <li><a href="https://medium.com/@bobdownsinfo">Medium</a></li>
         <li><a href="http://stackexchange.com/users/2298012/bobdowns">StackExchange</a></li>
+        <li><a href="https://careers.stackoverflow.com/bobdowns">StackOverflow Careers</a></li>
         <li><a href="http://www.ebay.com/usr/cyborg_cyborg">eBay</a></li>
         <li><a href="http://codepen.io/bobdownsinfo/">CodePen</a></li>
         <li><a href="https://dribbble.com/bobdowns">dribbble</a></li>
         <li><a href="https://webapp4.asu.edu/directory/person/1437173">ASU Directory Profile</a></li>
         <li><a href="https://profile.live.com/cid-118a7311991bd61d/">Microsoft Profile</a></li>
+        <li><a href="http://engineering-asu.confidentialresume.com/bobdowns/">ASU Resume</a></li>
+        <li><a href="https://www.youtube.com/user/csrcyborg/about">YouTube</a></li>
+        <li><a href="https://www.indiegogo.com/individuals/548536">IndieGogo</a></li>
     </ul>
 </body>
 
